<resources>
    <string name="app_name">Calculator</string>
    <string name="cyber_title">CYBER CALC</string>
    <string name="display_default">0</string>
    <string name="error_text">Error</string>
    <string name="clear">C</string>
    <string name="backspace">⌫</string>
    <string name="divide">÷</string>
    <string name="multiply">×</string>
    <string name="subtract">−</string>
    <string name="add">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>
</resources>
